samples/_failures_safe/1761556832_ae317a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_44d96a36.c: In function ‘main’:
./samples/SAFE/__tmp_44d96a36.c:143:5: error: expected expression at end of input
  143 |     if (memcmp(input_data, decompressed,
      |     ^~
./samples/SAFE/__tmp_44d96a36.c:143:5: error: expected declaration or statement at end of input
